tests/paczka1/small_fuzzy/26664319.err
Error in line 2: A61 S667 11,0
Error in line 8: yrw S667 -4,0
Error in line 9: ZhRV2AYAenK S923 43,48
Error in line 7: yrw S667 80,9
